--- a/css/otherConfig.css
+++ b/css/otherConfig.css
@@ -3,74 +3,84 @@
     text-shadow: 0 0 3px black;
     box-shadow: 0 0 10px lime;
 }
+
 #conteudoGlacial {
-    color:royalblue;
-    box-shadow: 0 0 10px royalblue;    
+    color: royalblue;
+    box-shadow: 0 0 10px royalblue;
 }
+
 #conteudoEletrico {
     color: mediumpurple;
     box-shadow: 0 0 10px mediumpurple;
 }
+
 #conteudoRadiacao {
     color: yellow;
     text-shadow: 0 0 3px black;
     box-shadow: 0 0 10px yellow;
 }
+
 #conteudoMagnetismo {
     color: #1c1c1c;
     text-shadow: 0 0 3px white;
     box-shadow: 0 0 10px #1c1c1c;
 }
+
 #conteudoIgnio {
-    color:chocolate;
+    color: chocolate;
     box-shadow: 0 0 10px chocolate;
 }
+
 #conteudoGasoso {
     color: mediumaquamarine;
     text-shadow: 0 0 3px black;
     box-shadow: 0 0 10px mediumaquamarine;
 }
+
 #conteudoCorrosivo {
     color: yellowgreen;
     text-shadow: 0 0 3px black;
     box-shadow: 0 0 10px yellowgreen;
 }
+
 #conteudoViral {
     color: violet;
     text-shadow: 0 0 3px black;
     box-shadow: 0 0 10px violet;
 }
+
 #conteudoColisivo {
     color: cadetblue;
     box-shadow: 0 0 10px cadetblue;
 }
 
+
 /*botoes dark mode e light mode abaixo*/
+
 #trocaTema {
-    margin: 3px;
-    height: 50px;
-    width: 84px;
-    left:0;
-    position: absolute;
+    margin: 1%;
 }
-#btnDarkMode {
-    margin: 1px;
+
+#btnDarkMode {}
+
+#btnLightMode {}
+
+#cps-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#ca {
+    color: white;
+    display: flex;
+    justify-content: baseline;
     font-size: 10px;
-    background: linear-gradient(black, #1c1c1c,black);
-    height: 40px;
-    width: 40px;
-    color:red;
-    border: solid 1px red;
-    border-radius: 15px;
 }
-#btnLightMode {
-    margin: 1px;
-    font-size: 10px;
-    background: linear-gradient(#1c1c1c, darkslategray, #1c1c1c);
-    height: 40px;
-    width: 40px;
-    color: cyan;
-    border: solid 1px cyan;
-    border-radius: 15px;
-    float: right;
+
+.logoca {
+    margin-left: 4%;
 }
+
+#campBusca {}
