--- a/css/DarkMode.css
+++ b/css/DarkMode.css
@@ -3,6 +3,10 @@ body {
     background-color: #1B3057;
 }
 
+hr{
+    border-color: #223250 !important;
+}
+
 footer {
     position: absolute;
     width: 100%;
@@ -127,5 +131,33 @@ button {
 }
 
 
-/* botoes elementos inicia */
+/* CARD */
 
+.card {
+    color: #6995b9;
+    background-color: #223250;
+    border-radius: 5px;
+    box-shadow: 7px 7px 13px 0px rgb(16, 26, 83) !important;
+    padding: 30px;
+    margin: 20px;
+    width: 350px;
+    transition: all 0.3s ease-out;
+  }
+
+  .blue {
+    border-left: 3px solid #00429e !important;
+  }
+   
+  .green {
+    border-left: 3px solid #045c0e !important;
+  }
+   
+  .red {
+    border-left: 3px solid #96000c !important;
+  }
+
+  /* FIM DE CARD */
+
+.slider:hover{
+    opacity: 0.8;
+}
