--- a/css/DarkMode.css
+++ b/css/DarkMode.css
@@ -134,10 +134,10 @@ button {
 /* CARD */
 
 .card {
-    color: #6995b9;
-    background-color: #223250;
+    color: #dcebf8;
+    background-color: #182a4d;
     border-radius: 5px;
-    box-shadow: 7px 7px 13px 0px rgb(16, 26, 83) !important;
+    box-shadow: 7px 7px 13px 0px rgba(5, 11, 44, 0.548) !important;
     padding: 30px;
     margin: 20px;
     width: 350px;
